# testing-lab-1

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
src/: dummy_test.cpp  main.cpp  main_test.cpp
src/game/: cells_types.h  game.cpp  game.h  game_test.cpp  helper_functions_test.cpp  helper_functions_test.h  parser.cpp  parser.h  parser_test.cpp
src/matrices/: cyclic_matrix.h  cyclic_matrix.inl  cyclic_matrix_test.cpp  matrix.h  matrix.inl  matrix_test.cpp
